@@ -21,8 +21,9 @@ google-gadgets (0.11.2-0.1) UNRELEASED; urgency=low
     Hurd issue).
   * Add small header for patches 01_am_maintainer_mode.patch, 02_kfreebsd.patch
     and 04_hurd.patch.
+  * Refresh patch 03_GRE_Version.patch, thanks Mike Hommey for the hints.
 
- -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Sun, 31 Jan 2010 18:18:07 +0100
+ -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Mon, 01 Feb 2010 11:49:48 +0100
 
 google-gadgets (0.11.1-2) unstable; urgency=low
 
